--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,10 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Playfair Display", serif;
+	font-family: 'Playfair Display', serif;
 }
 p {
-	font-family: "Raleway", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	margin-bottom: 1rem;
 }
 
